# Marp

./: .gitmodules  genux.md  package-lock.json  package.json  readme.md
Stepper/: readme.md
Stepper/pi/: CMakeLists.txt  README.md  stepper_pi.cpp
Stepper/pi/scripts/: install-services.sh  kinect_stream.py  service-monitor.desktop  service-monitor.py  setup-softap.sh  setup-wifi-direct.sh  start-video-stream.sh  video_multiplexer.py
Stepper/pi/scripts/video_multiplexer/: __init__.py
Stepper/pi/scripts/video_multiplexer/servers/: http_server.py
Stepper/pi/src/: Constants.hpp  InputManager.cpp  MotorController.cpp  MotorController.hpp  main.cpp
Stepper/pi/systemd/: stepper-controller.service  video-stream.service  wifi-direct.service
Stepper/sketch/: sketch.ino
i2c-test/: README.md
i2c-test/arduino/: i2c_bridge_test.ino
i2c-test/pi/: i2c_test.py
scripts/: render-mermaid.ps1
